added track title

--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
-<html lang="en" class="no-js">
-
-<head>
-  <title>NZTA</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./CSS/style.css">
-</head>
-
-<body>
-  <div class="containerLogin">
-  <div class="login">
-  <form>
-  <img src="./imgs/rsz_2logo-nzta.PNG" width="75%" height="75%" class="loginImage"/>
-      <h1 class="loginTitle">Sign in </h1>
-      <div class="col">
-        <input type="text" name="username" placeholder="Username" required>
-        <input type="password" name="password" placeholder="Password" required>
-        <input type="submit" value="Login">
-    </div>
-  </form>
-  </div>
-</div>
-</body>
-
+<html lang="en">
+   <head>
+      <title>TRACK | NZ Transport Agency</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="./CSS/style.css">
+   </head>
+   <body>
+      <div class="containerLogin">
+         <div class="login">
+            <form>
+               <img src="./imgs/rsz_2logo-nzta.PNG" width="75%" height="75%" class="loginImage"/>
+			   <h1 class="loginTitle">Welcome to TRACK </h1>
+               <h1 class="signInTitle">Sign in </h1>
+               <div class="col">
+                  <input type="text" name="username" placeholder="Username" required>
+                  <input type="password" name="password" placeholder="Password" required>
+                  <input type="submit" value="Login">
+               </div>
+            </form>
+         </div>
+      </div>
+   </body>
 </html>
