added media queries

--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
+<!DOCTYPE html>
 <html lang="en">
    <head>
+     <meta charset="utf-8" />
+     <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>TRACK | NZ Transport Agency</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="./CSS/style.css">
    </head>
    <body>
+
+     <div class="login-hero">
       <div class="containerLogin">
          <div class="login">
             <form>
-               <img src="./imgs/rsz_2logo-nzta.PNG" width="75%" height="75%" class="loginImage"/>
-			   <h1 class="loginTitle">Welcome to TRACK </h1>
+               <img src="./imgs/rsz_2logo-nzta.PNG" width="60%" height="60%" class="loginImage"/>
+			         <h1 class="loginTitle">Welcome to TRACK </h1>
                <h1 class="signInTitle">Sign in </h1>
                <div class="col">
                   <input type="text" name="username" placeholder="Username" required>
@@ -19,5 +23,6 @@
             </form>
          </div>
       </div>
+    </div>
    </body>
 </html>
