--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                <img src="./imgs/rsz_2logo-nzta.PNG" width="60%" height="60%" class="loginImage"/>
 			         <h1 class="loginTitle">Welcome to TRACK </h1>
                <h1 class="signInTitle">Sign in </h1>
-               <div class="col">
+               <div class="col row">
                   <input type="text" name="username" placeholder="Username" required>
                   <input type="password" name="password" placeholder="Password" required>
                   <input type="submit" value="Login">
